--- a/src/ThreeFourteen.QuickService/ThreeFourteen.QuickService.csproj
+++ b/src/ThreeFourteen.QuickService/ThreeFourteen.QuickService.csproj
@@ -1,8 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <OutputType>Library</OutputType>
+
+    <PackageId>ThreeFourteen.QuickService</PackageId>
+    <Description>Get a an opinionated API service quickly</Description>
+    <Title>ThreeFourteen.QuickService</Title>
+    <Authors>Kevin Kavanagh</Authors>
+    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+    <PackageProjectUrl>https://github.com/KevWK314/ThreeFourteen.QuickService</PackageProjectUrl>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <PackageTags>API service</PackageTags>
+    <PackageIcon>icon.jpg</PackageIcon>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
 
   <ItemGroup>
