Missing pack config

--- a/src/ThreeFourteen.QuickService/ThreeFourteen.QuickService.csproj
+++ b/src/ThreeFourteen.QuickService/ThreeFourteen.QuickService.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <OutputType>Library</OutputType>
 
+    <IsPackable>true</IsPackable>
     <PackageId>ThreeFourteen.QuickService</PackageId>
     <Description>Get a an opinionated API service quickly</Description>
     <Title>ThreeFourteen.QuickService</Title>
@@ -20,6 +21,11 @@
   <ItemGroup>
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="5.0.1" />
     <PackageReference Include="Serilog.AspNetCore" Version="3.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="icon.jpg" Pack="true" PackagePath="\" />
+    <None Include="..\..\LICENSE" Pack="true" PackagePath="LICENSE" />
   </ItemGroup>
 
 </Project>
